CSS - set height for pseudo-element ::placeholder to prevent text cutoff

--- a/src/assets/stylesheets/general/input-text.less
+++ b/src/assets/stylesheets/general/input-text.less
@@ -1,3 +1,7 @@
+::placeholder {
+  height: 40px;
+}
+
 .input-text {
   border: 1px solid @grayBorderLighter;
   border-radius: 0;
@@ -11,6 +15,7 @@
   &:not(textarea) {
     height: 40px;
   }
+
   textarea& {
     padding-top: 5px;
     padding-bottom: 5px;
